完成hash_category.cpp的读取配置，hash one-hot特征，离散化浮点特征等功能

--- a/src/libfm/Makefile
+++ b/src/libfm/Makefile
@@ -4,6 +4,7 @@ OBJECTS := \
 	libfm.o \
 	tools/transpose.o \
 	tools/convert.o \
+	tools/hash_category.o
 
 all: libFM transpose convert hash_category
 
