在Makefile中增加c++11支持

--- a/src/libfm/Makefile
+++ b/src/libfm/Makefile
@@ -1,5 +1,5 @@
 BIN_DIR := ../../bin/
-
+FLAGS := -O3 -Wall -std=c++11
 OBJECTS := \
 	libfm.o \
 	tools/transpose.o \
@@ -10,10 +10,10 @@ all: libFM transpose convert hash_category
 
 libFM: libfm.o
 	mkdir -p $(BIN_DIR)
-	g++ -O3 -Wall libfm.o -o $(BIN_DIR)libFM
+	g++ $(FLAGS) libfm.o -o $(BIN_DIR)libFM
 
 %.o: %.cpp
-	g++ -O3 -Wall -c $< -o $@
+	g++ $(FLAGS) -c $< -o $@
 
 clean:	clean_lib
 	mkdir -p $(BIN_DIR)
@@ -25,12 +25,12 @@ clean_lib:
 
 transpose: tools/transpose.o
 	mkdir -p $(BIN_DIR)
-	g++ -O3 tools/transpose.o -o $(BIN_DIR)transpose
+	g++  $(FLAGS)  tools/transpose.o -o $(BIN_DIR)transpose
 
 convert: tools/convert.o
 	mkdir -p $(BIN_DIR)
-	g++ -O3 tools/convert.o -o $(BIN_DIR)convert
+	g++ $(FLAGS) tools/convert.o -o $(BIN_DIR)convert
 
 hash_category: tools/hash_category.o
 	mkdir -p $(BIN_DIR)
-	g++ -O3 tools/hash_category.o -o $(BIN_DIR)hash_category
+	g++ $(FLAGS) tools/hash_category.o -o $(BIN_DIR)hash_category
